--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
                         <li>COMM.</li>
                     </ul>
                 </li>
+                <li class="menu4">
+                    <span>고객센터</span>
+                    <ul class="menu4sub submenu">
+                        <li>공지사항</li>
+                        <li>버거킹앱이용안내</li>
+                        <li>FAQ</li>
+                        <li>문의</li>
+                    </ul>
+                </li>
             </ul>
             <div class="nav-btn-group">
                 <button class="nav-btn btn1" onclick="location.href='login.html';">딜리버리 주문</button>
@@ -60,7 +69,7 @@
                 <a id="recommend"></a>
             </div>
             <div class="menu-video">
-                <iframe width="1100" height="619"
+                <iframe
                     src="https://www.youtube.com/embed/4orwTSAw3bQ?autoplay=1&mute=1&loop=1&playlist=4orwTSAw3bQ"
                     title="BurgerKingYoutube" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
