--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
     </header>
     <nav>
         <ul>
-            <li>HOME</li>
+            <li><a href="index.html">HOME</a></li>
             <li>로그인</li>
         </ul>
     </nav>
